# osu-collector-dl

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml
.cargo/: audit.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/osu-collector/: Cargo.toml
crates/osu-collector/src/: constants.rs  lib.rs  types.rs
src/: app.rs  defines.rs  error.rs  gui.rs  main.rs  utils.rs
src/osu_collector/: constants.rs  mod.rs  types.rs
