[package]
name = "osu-collector-dl"
version = "0.1.0"
edition = "2021"

[features]
default = []
persistence = ["eframe/persistence", "serde"]

[workspace]
members = ["crates/osu-collector"]

[dependencies]
eframe = "0.23.0"
image = "0.24.7"
log = "0.4.19"
poll-promise = { version = "0.3.0", features = ["tokio"] }

[dependencies.serde]
version = "1.0.193"
features = ["derive"]
optional = true

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[dependencies.osu-collector]
path = "crates/osu-collector"
