[package]
name = "osu-collector-dl"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[features]
default = []
persistence = ["eframe/persistence", "serde"]

[workspace]
members = ["crates/osu-collector"]

[dependencies]
eframe = "0.24.1"
image = "0.24.7"
log = "0.4.20"
poll-promise = { version = "0.3.0", features = ["tokio"] }

[dependencies.serde]
version = "1.0.193"
features = ["derive"]
optional = true

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt-multi-thread"]

[dependencies.osu-collector]
path = "crates/osu-collector"
