[package]
name = "osu-collector-dl"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[features]
default = []
persistence = ["eframe/persistence", "serde"]

[workspace]
members = ["crates/osu-collector"]
resolver = "3"

[dependencies]
eframe = "0.34.3"
image = "0.25.10"
log = "0.4.32"
thiserror = "2.0.18"
poll-promise = { version = "0.3.0", features = ["tokio"] }
rfd = { version = "0.17.2", default-features = false, features = [
    "xdg-portal",
    "wayland",
    "file-handle-inner"
] }

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
optional = true

[dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt-multi-thread"]

[dependencies.osu-collector]
path = "crates/osu-collector"
