[package]
name = "osu-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
futures = "0.3.29"
futures-util = "0.3.28"
log = "0.4.19"
rand = "0.8.5"
serde_derive = "1.0.171"
serde_json = "1.0.102"

[dependencies.reqwest]
version = "0.11.18"
features = ["blocking", "json", "stream"]

[dependencies.serde]
version = "1.0.171"
features = ["serde_derive", "std"]

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread", "fs"]
