[package]
name = "osu-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.5"
futures = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
rand = "0.8.5"
serde_derive = "1.0.193"
serde_json = "1.0.116"

[dependencies.reqwest]
version = "0.11.22"
features = ["blocking", "json", "stream"]

[dependencies.serde]
version = "1.0.193"
features = ["serde_derive", "std"]

[dependencies.tokio]
version = "1.35.0"
features = ["macros", "rt-multi-thread", "fs"]
