[package]
name = "osu-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
futures-util = "0.3.32"
log = "0.4.32"
rand = "0.10.1"
serde_derive = "1.0.228"
serde_json = "1.0.150"
osu-db = "0.3.0"

[dependencies.reqwest]
version = "0.13.4"
features = ["blocking", "json", "stream"]

[dependencies.serde]
version = "1.0.228"
features = ["serde_derive", "std"]

[dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt-multi-thread", "fs"]
